baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__02_parser__partial_input.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Partial"
    L_BRACE "{"
    FIELD
      WORD "field1"
      TYPE_EXPR "str"
        WORD "str"
    FIELD "// Incomplete type name
  field2"
      WORD "field2"
    FIELD
      WORD "field3"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE "@  // Incomplete attribute
  field4"
        AT "@"
        WORD "field4"
    FIELD "string"
      WORD "string"
    AT "@"
    FIELD
      WORD "alias"
      TYPE_EXPR
        L_PAREN "("
        FUNCTION_TYPE_PARAM
          TYPE_EXPR "// Unclosed attribute
  field5"
            WORD "field5"
        WORD "string"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Incomplete"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "param1"
        TYPE_EXPR "string"
          WORD "string"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "NextFunction"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "parsed"
            QUOTE """
            WORD "parsed"
            QUOTE """
        R_BRACE "}"
  ENUM_DEF "enum  // Missing enum name
  VALUE1"
    KW_ENUM "enum"
    WORD "VALUE1"
  WORD "VALUE2"
  R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "ValidEnum"
    L_BRACE "{"
    ENUM_VARIANT "// Should parse this
  OPTION1"
      WORD "OPTION1"
    ENUM_VARIANT "OPTION2"
      WORD "OPTION2"
    R_BRACE "}"

=== ERRORS ===
Error: field 'field2' is missing a type annotation
   ╭─[ partial_input.baml:4:3 ]
   │
 4 │   field2  // Missing type entirely
   │   ───┬──  
   │      ╰──── field 'field2' is missing a type annotation
   │ 
   │ Note: Error code: E0010
───╯

Error: field 'string' is missing a type annotation
   ╭─[ partial_input.baml:6:10 ]
   │
 6 │   field4 string @alias(  // Unclosed attribute
   │          ───┬──  
   │             ╰──── field 'string' is missing a type annotation
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found '@'
   ╭─[ partial_input.baml:6:17 ]
   │
 6 │   field4 string @alias(  // Unclosed attribute
   │                 ┬  
   │                 ╰── Expected Unexpected token in class body, found '@'
   │ 
   │ Note: Error code: E0010
───╯

Error: Unexpected 'string' in type expression
   ╭─[ partial_input.baml:7:10 ]
   │
 7 │   field5 string  // This should parse correctly
   │          ───┬──  
   │             ╰──── Unexpected 'string' in type expression
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected ')', found '}'
   ╭─[ partial_input.baml:8:1 ]
   │
 8 │ }
   │ ┬  
   │ ╰── Expected ')', found '}'
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected ')', found function
    ╭─[ partial_input.baml:13:1 ]
    │
 13 │ function NextFunction() -> string {  // Should still parse this
    │ ────┬───  
    │     ╰───── Expected ')', found function
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected return type (->), found function
    ╭─[ partial_input.baml:13:1 ]
    │
 13 │ function NextFunction() -> string {  // Should still parse this
    │ ────┬───  
    │     ╰───── Expected return type (->), found function
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected function body, found function
    ╭─[ partial_input.baml:13:1 ]
    │
 13 │ function NextFunction() -> string {  // Should still parse this
    │ ────┬───  
    │     ╰───── Expected function body, found function
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected '{', found identifier
    ╭─[ partial_input.baml:19:3 ]
    │
 19 │   VALUE2
    │   ───┬──  
    │      ╰──── Expected '{', found identifier
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found identifier
    ╭─[ partial_input.baml:19:3 ]
    │
 19 │   VALUE2
    │   ───┬──  
    │      ╰──── Expected top-level declaration, found identifier
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected top-level declaration, found '}'
    ╭─[ partial_input.baml:20:1 ]
    │
 20 │ }
    │ ┬  
    │ ╰── Expected top-level declaration, found '}'
    │ 
    │ Note: Error code: E0010
────╯
